--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,9 @@ SET(CMAKE_C_EXTENSIONS NO)
 SET(CMAKE_CXX_STANDARD 14)
 SET(CMAKE_CXX_STANDARD_REQUIRED YES)
 SET(CMAKE_CXX_EXTENSIONS NO)
-SET(XNNPACK_ENABLE_JIT OFF)
-SET(XNNPACK_PLATFORM_JIT OFF)
-build failed
+SET(XNNPACK_ENABLE_JIT ON)
+SET(XNNPACK_PLATFORM_JIT ON)
+
 # ---[ Options.
 SET(XNNPACK_LIBRARY_TYPE "default" CACHE STRING "Type of library (shared, static, or default) to build")
 SET_PROPERTY(CACHE XNNPACK_LIBRARY_TYPE PROPERTY STRINGS default static shared)
