--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,7 @@ INCLUDE(GNUInstallDirs)
 IF(XNNPACK_BUILD_TESTS)
   ENABLE_TESTING()
 ENDIF()
-qweqweqweqeqweweqwe
+message(FATAL_ERROR "FUCK")
 
 ADD_COMPILE_DEFINITIONS("XNN_ENABLE_ARM_FP16_VECTOR=$<BOOL:${XNNPACK_ENABLE_ARM_FP16_VECTOR}>")
 ADD_COMPILE_DEFINITIONS("XNN_ENABLE_ARM_FP16_SCALAR=$<BOOL:${XNNPACK_ENABLE_ARM_FP16_SCALAR}>")
